# VisionAI-Interviewer

./: .gitignore  ADVANCED_README.md  README.md  advanced_malpractice_detection.py  config.ini  demo.py  malpractice_detection.py  malpractice_log.txt  requirements.txt  setup.py  test.py  test_detection.py
Interview-Bot/: README.md  bot.py  notes.txt  pyproject.toml
Interview-Bot/interview_bot/: cli.py  config.py  engine.py  groq_client.py  logging_utils.py  models.py  pdf_utils.py  reporting.py  storage.py
Interview-Bot/tests/: test_engine_with_mock_llm.py  test_groq_json_extract.py  test_pdf_utils.py  test_storage.py
api/: requirement.txt  requirements.txt
api/src/: InterviewService.py  auth_service.py  config.py  models.py  routes.py  run.py
ui/src/: App.jsx
ui/src/pages/: Hero.jsx  InterViewSetupPage.jsx  InterviewPage.jsx  Login.jsx  RegisterationForm.jsx  UserDashBoard.jsx
